--- a/ls/action.yml
+++ b/ls/action.yml
@@ -1,5 +1,5 @@
 name: "List Directory Summary"
-description: "List files in a directory and append them as a Markdown table to \$GITHUB_STEP_SUMMARY"
+description: "List files in a directory and append them as a Markdown table to GITHUB_STEP_SUMMARY"
 author: a3.services
 branding:
   icon: settings
