--- a/copy-match/action.yml
+++ b/copy-match/action.yml
@@ -9,8 +9,9 @@ inputs:
     description: "Destination directory to copy matching files into"
     required: true
   match:
-    description: "Comma-separated list of filename prefixes to match"
+    description: "Array of filename prefixes to match"
     required: true
+    type: array
 runs:
   using: "composite"
   steps:
@@ -18,12 +19,10 @@ runs:
       run: |
         mkdir -p "${{ inputs.dest }}"
 
-        IFS=',' read -ra PATTERNS <<< "${{ inputs.match }}"
-
         for file in "${{ inputs.source }}"/*; do
           fname=$(basename "$file")
 
-          for pat in "${PATTERNS[@]}"; do
+          for pat in "${{ inputs.match[@] }}"; do
             if [[ "$fname" == "$pat"* ]]; then
               cp "$file" "${{ inputs.dest }}/"
               echo "Copied: $fname → ${{ inputs.dest }}"
