--- a/ls/action.yml
+++ b/ls/action.yml
@@ -7,7 +7,7 @@ branding:
 inputs:
   dir:
     description: "Directory to list"
-    required: true
+    required: false
     default: "."
 runs:
   using: "composite"
