--- a/copy-match/action.yml
+++ b/copy-match/action.yml
@@ -22,7 +22,7 @@ runs:
         for file in "${{ inputs.source }}"/*; do
           fname=$(basename "$file")
           echo "....."
-          echo fname
+          echo $fname
 
           for pat in "${{ inputs.match }}"; do
             if [[ "$fname" == $pat ]]; then
