--- a/copy-match/action.yml
+++ b/copy-match/action.yml
@@ -23,8 +23,10 @@ runs:
           fname=$(basename "$file")
           echo "....."
           echo $fname
+          echo 
 
           for pat in "${{ inputs.match }}"; do
+            echo ">>>>>> $pat"
             if [[ "$fname" == $pat ]]; then
               cp "$file" "${{ inputs.dest }}/"
               echo "Copied: $fname → ${{ inputs.dest }}"
